# pysurvey

./: LICENSE  README.md  pyproject.toml
src/pysurvey/: __init__.py
src/pysurvey/cli/: main.py
src/pysurvey/logic/: __init__.py  json_serializable.py  qanda.py  respondee.py  survey.py
test/: test_data_serialization.py  test_jsonserializable.py  test_openrange.py  test_survey.py
