[project]
name = "pysurvey"
version = "0.0.1"
dependencies = ["msgspec==0.18.6"]
requires-python = ">=3.10"
authors = [{ name = "Ben De Jonge", email = "ben.de.jonge1996@gmail.com" }]
maintainers = [{ name = "Ben De Jonge", email = "ben.de.jonge1996@gmail.com" }]

description = "A Python 3.12 library to setup simple questionaires."
readme = "README.md"
keywords = ["python", "survey", "backend"]

[tool.setuptools.dynamic]
version = { attr = "package.__version__" }

[project.urls]
Documentation = "https://readthedocs.org"
Repository = "https://github.com/BenDeJonge/pysurvey"
Issues = "https://github.com/BenDeJonge/pysurvey/issues"
Changelog = "https://github.com/BenDeJonge/pysurvey/blob/main/CHANGELOG.md"
